k8s/mongodb.yaml
#####################################
# 2018 ithome ironman
# Author: James Lu
# Topic: k8s 不自賞 - Day 30 鐵人達成
# Url: https://ithelp.ithome.com.tw/articles/10197352
# Licence: MIT
#####################################

apiVersion: v1
kind: Pod
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  containers:
  - name: mongodb
    image: mongo
    ports:
      - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
